--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 html{scroll-behavior:smooth;}
+body{font:family:'Poppins',sans-serif;margin:0;padding:0;}
 .hero {
   display: flex;
   flex-direction: column;
